Update Ghidra Headless FInal 1.0.ipynb
Fixed typos in Potentially Dangerous Calls To System

--- a/Ghidra Headless FInal 1.0.ipynb
+++ b/Ghidra Headless FInal 1.0.ipynb
@@ -338,7 +338,7 @@
     "    x=\"File\",\n",
     "    y=\"Total_System_Xrefs\",\n",
     "    figsize=(900, 700),\n",
-    "    title=\"Potentiallly Dangerous CallsvTovSystem\",\n",
+    "    title=\"Potentially Dangerous Calls To System\",\n",
     "    xlabel=\"Binary\",\n",
     "    ylabel=\"Total\",\n",
     "    vertical_xlabel=True,\n",
